# coursework_3

./: README.md  pyproject.toml
tests/: test_operation.py  test_operation_unittest.py  test_operations_list.py  tests.operations.json
utils/: main.py  utils_operation.py
