[tool.poetry]
name = "coursework-3"
version = "0.1.0"
description = ""
authors = ["dasha gromova <darya.gromova8559@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
